otro avance al repo:

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -4,12 +4,12 @@
 
 <table class="table table-striped container">
   <thead>
-    <th>producto</th>
-    <th>descripcion</th>
-    <th>precio</th>
-    <th>codigo</th>
-    <th>stock</th>
-    <th>categoria</th>
+    <td>producto</td>
+    <td>descripcion</td>
+    <td>precio</td>
+    <td>codigo</td>
+    <td>stock</td>
+    <td>categoria</td>
   </thead>
   <tbody>
     {{#each products}}
