--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,18 +1,19 @@
-{{!-- este .handlebar trabaja con la ruta ./ --}}
+{{!-- este .handlebar trabaja con la ruta /products/home.handlebars --}}
 
 <h1 class="display-3 text-center">realtime products</h1>
 <hr />
 <div class="container">
-  <form type="onsubmit" id="createForm" >
+  <form type="onsubmit" id="createForm">
     <div class="m-2">title: <input type="text" id="title"></div>
     <div class="m-2">description: <input type="text" id="description"></div>
     <div class="m-2">price: <input type="number" id="price"></div>
     <div class="m-2">code: <input type="text" id="code"></div>
     <div class="m-2">stock: <input type="text" id="stock"></div>
     <div class="m-2">category: <input type="text" id="category"></div>
-    <button type="submit" id="createBtn" class="btn btn-primary">create product</button>
+  <button type="submit" id="createBtn" class="btn btn-primary">create product</button>
+
   </form>
-  
+
   <hr />
   <table id="realProductsTable" class="table table-striped">
     <thead>
