corrección importante  a index.js. Finalmente corre la llamada post al fetch /api/products. Pero aún no corre la vista dinámica por socket e io... Seguiré trabajando

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -2,6 +2,7 @@
 
 <h1 class="display-3 text-center">realtime products</h1>
 <hr />
+{{!-- form desde el cual extraigo los datos del objeto que cargaré con petición POST: --}}
 <div class="container">
   <form type="onsubmit" id="createForm">
     <div class="m-2">title: <input type="text" id="title"></div>
