FINALMENTE! Eran unos parentesis que le faltaban a un .json de fetch y un async que no debía estar en mi websocket! Qué dolor de cabeza jajajaja

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -28,7 +28,7 @@
         <th>category</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody id="tbdodyProducts">
       {{#each products}}
       <tr>
         <td><button class="btn btn-danger" onclick="deleteProduct({{this.id}})">eliminar</button></td>
