--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -4,13 +4,14 @@
 
 <table class="table table-striped container">
   <thead>
-    <td>producto</td>
-    <td>descripcion</td>
-    <td>precio</td>
-    <td>codigo</td>
-    <td>stock</td>
-    <td>categoria</td>
+    <th>producto</th>
+    <th>descripcion</th>
+    <th>precio</th>
+    <th>codigo</th>
+    <th>stock</th>
+    <th>categoria</th>
   </thead>
+  
   <tbody>
     {{#each products}}
     <tr>
