--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon">
   {{!-- bootstrap: --}}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <title>app</title>
+    {{!-- SEO: --}}
+  <title>{{#if SEO.title}}{{SEO.title}}{{/if}}{{#else}}e-commerce{{/else}}</title>
+  {{#if SEO.description}}<meta name="description" content={{SEO.description}}>{{/if}}
+  {{#if SEO.keywords}}<meta name="keywords" content={{SEO.keywords}}>{{/if}}
 </head>
 <body>
   {{{body}}}
