--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,51 +1,1 @@
-{{!-- este .handlebar trabaja con la ruta /products/home.handlebars --}}
-
-<h1 class="display-3 text-center">realtime products</h1>
-<hr />
-<div class="container" style="width: 50%;">
-  <form type="onsubmit" id="createForm">
-    <div class="m-2 form-label">title: <input type="text" class="form-control" id="title"></div>
-    <div class="m-2 form-label">description: <input type="text" class="form-control" id="description"></div>
-    <div class="m-2 form-label">price: <input type="number" class="form-control" id="price"></div>
-    <div class="m-2 form-label">code: <input type="text" class="form-control" id="code"></div>
-    <div class="m-2 form-label">stock: <input type="text" class="form-control" id="stock"></div>
-    <div class="m-2 form-label">category: <input type="text" class="form-control" id="category"></div>
-
-    <button type="submit" id="createBtn" class="btn btn-primary">create product</button>
-  </form>
-</div>
-<div class="container">
-  <hr />
-  <table id="realProductsTable" class="table table-striped">
-    <thead>
-      <tr>
-        <th></th>
-        <th>title</th>
-        <th>description</th>
-        <th>price</th>
-        <th>code</th>
-        <th>stock</th>
-        <th>category</th>
-      </tr>
-    </thead>
-    <tbody id="tbdodyProducts">
-      {{#each products}}
-      <tr>
-        <td><button class="btn btn-danger" onclick="deleteProduct({{this.id}})">eliminar</button></td>
-        <td>{{this.title}}</td>
-        <td>{{this.description}}</td>
-        <td>{{this.price}}</td>
-        <td>{{this.code}}</td>
-        <td>{{this.stock}}</td>
-        <td>{{this.category}}</td>
-      </tr>
-      {{/each}}
-    </tbody>
-
-  </table>
-</div>
-
-
-{{!-- socket: --}}
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script>
+wellcome!
