--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -1,31 +1,35 @@
+<div  style="height: 100%; margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center">
 
-
-<h2 class="display-6 text-center">{{product.title}}</h2>
-
-<table class="table table-striped container">
-<thead>
-  <tr>
-    <td></td>
-    <td><strong>producto</strong></td>
-    <td><strong>descripcion</strong></td>
-    <td><strong>precio</strong></td>
-    <td><strong>codigo</strong></td>
-    <td><strong>stock</strong></td>
-    <td><strong>categoria</strong></td>
-  </tr>
-</thead>
-<tbody>
-  <td><button class="btn btn-success" onclick="addProductToCart('{{product.id}}')">add to cart</button></td>
-  <td>{{product.title}}</td>
-  <td>{{product.description}}</td>
-  <td>{{product.price}}</td>
-  <td>{{product.code}}</td>
-  <td>{{product.stock}}$</td>
-  <td>{{product.category}}</td>
-</tbody>
+<table class="table table-striped container shadow-sm p-3 mb-5 bg-body-tertiary rounded" style="margin-top: 10rem">
+  <thead>
+    <tr>
+      <td></td>
+      <td><strong>producto</strong></td>
+      <td><strong>descripcion</strong></td>
+      <td><strong>precio</strong></td>
+      <td><strong>codigo</strong></td>
+      <td><strong>stock</strong></td>
+      <td><strong>categoria</strong></td>
+    </tr>
+  </thead>
+  <tbody>
+    <td><button class="btn btn-success" onclick="addProductToCart('{{product.id}}')">add to cart</button></td>
+    <td>{{product.title}}</td>
+    <td>{{product.description}}</td>
+    <td>{{product.price}}</td>
+    <td>{{product.code}}</td>
+    <td>{{product.stock}}$</td>
+    <td>{{product.category}}</td>
+  </tbody>
 </table>
+</div>
 
-{{!--  --}}
+
+{{!-- este script me toca copiarlo en el archivo html porque no me corre la importación que le hago desde la carapeta pública .__. --}}
+
 {{!-- <script src="js/controllers/addProductToCart.js">
 </script> --}}
 
