--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -33,7 +33,7 @@
     <tbody id="tbdodyProducts">
       {{#each products}}
       <tr>
-        <td><button class="btn btn-danger btnDelete" data-product-id="{{this._id}}" >eliminar</button></td>
+        <td><button class="btn btn-danger btnDelete" data-product-id="{{this._id}}" >delete</button></td>
         <td>{{this.title}}</td>
         <td>{{this.description}}</td>
         <td>{{this.price}}$</td>
