desafio: Implementación de login

--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -1,3 +1,5 @@
+{{!-- este .handlebars trabaja con la ruta /products/:pid --}}
+
 <div  style="height: 100%; margin: 0;
   display: flex;
   justify-content: center;
@@ -61,4 +63,3 @@
     };
 
 </script>
-
