--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,4 +1,4 @@
-{{!-- este .handlebar trabaja con la ruta /products/home.handlebars --}}
+{{!-- este .handlebar trabaja con la ruta /products/handlebars --}}
 
 <hr />
 <div class="container" style="width: 50%;">
