--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -52,6 +52,9 @@
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+        {{#if user}}
+        <button id="logoutButton" type="button" class="btn btn-danger"  style="margin-left: 1rem;"> <a href="/api/sessions/logout" style="text-decoration: none; color: antiquewhite">logout</a> </button>        
+        {{/if}}
       </div>
     </div>
   </nav>
@@ -79,3 +82,6 @@
 
 </body>
 </html>
+{{#if user}}
+
+{{/if}}
