--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,11 +1,15 @@
 {{!-- este .handlebar trabaja con la ruta /products/ --}}
-
-
-
+  {{#if user}}
+  <div class="container text-center" style="margin-top: 1rem;">
+    <H4>Bienvenido, {{user.first_name}} {{user.last_name}}</H4>
+    <h5> (<a href="sessions/profile">{{user.email}} </a>) role: {{user.role}}</h5>
+  </div>
+    <h2 class="text-center">Productos</h2>
+  {{/if}}
 <div class="container">
 
 <nav aria-label="Page navigation " style="display:flex; justify-content:center">
-  <ul class="pagination" align="center" style="margin-top: 3rem;">
+  <ul class="pagination" align="center" style="margin-top: 1rem;">
 
     {{!-- se condiciona la muestra del 'anterior' al atributo 'hasPrevPage' de mi bson:--}}
     {{#if paginateInfo.hasPrevPage}}
@@ -56,6 +60,6 @@
 </table>
 </div>
 </div>
-<script src="js/controllers/addProductToCart.js">
 
+<script src="js/controllers/addProductToCart.js">
 </script>
