--- a/src/views/productsFromCart.handlebars
+++ b/src/views/productsFromCart.handlebars
@@ -3,10 +3,13 @@
 <h2 class="text-center" style="margin-top: 2rem;"> Products from Cart with id={{cart}}</h2>
 <p id="cid" data-cid="{{cart}}"></p>
 <hr />
+
 <div class="container">
   <div class="container d-flex justify-content-end">
     <button class="btn btn-danger" onclick="vaciarCarro('{{cart}}')">vaciar carrito</button>
+    <button class="btn btn-success" onclick="checkout('{{cart}}')">checkout</button>
   </div>
+
 
   <table class="table table-striped">
 
@@ -59,6 +62,21 @@
     alert(`deleteProductFromCart(${pid})`)
   }
 
+  const checkout = async (cid)=>{
+    
+    alert(`alert: ${cid}`)
 
+    await fetch(`/api/tickets/cart/${cid}`, {
+      method: "post"
+    })
+    .then(async(result)=>{
+      alert("entré al then del fetch: ")
+      const data = await result.json()
+
+      console.log("then: ",data)
+      return data
+    })
+    .catch((err)=>{alert("entré al catch del fetch: ", err)})
+  }
 
 </script>
