features: a lot again

--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,6 +1,6 @@
 <h1>Chat</h1>
 <div>
-  <i id="username">{{user}}</i> <input id="chatBox" type="text">
+  <i id="username">{{user.email}}</i> <input id="chatBox" type="text">
 </div>
 <div id="messagesLogs"></div>
 
