--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,14 @@
   {{!-- bootstrap: --}}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    {{!-- SEO: --}}
+  {{!-- SEO: --}}
   <title>{{#if SEO.title}}{{SEO.title}}{{/if}}{{#else}}e-commerce{{/else}}</title>
-  {{#if SEO.description}}<meta name="description" content={{SEO.description}}>{{/if}}
-  {{#if SEO.keywords}}<meta name="keywords" content={{SEO.keywords}}>{{/if}}
+  {{#if SEO.description}}
+  <meta name="description" content={{SEO.description}}>{{/if}}
+  {{#if SEO.keywords}}
+  <meta name="keywords" content={{SEO.keywords}}>{{/if}}
 </head>
+
 <body style="min-height: 100vh;
   display: flex;
   flex-direction: column">
@@ -52,35 +56,59 @@
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+
         {{#if user}}
-        <button id="logoutButton" type="button" class="btn btn-danger"  style="margin-left: 1rem;"> <a href="/api/sessions/logout" style="text-decoration: none; color: antiquewhite">logout</a> </button>        
+
+          {{#eq user.role "admin" }}
+          <button id="panelButton" type="button" class="btn btn-success" style="margin-left: 1rem;">
+            <a href="/products/realTimeProducts" style="text-decoration: none; color: antiquewhite">panel</a>
+          </button>
+          {{else}}
+
+          {{#eq user.role "premium"}}
+          <button id="panelButton" type="button" class="btn btn-success" style="margin-left: 1rem;">
+            <a href="/products/realTimeProducts" style="text-decoration: none; color: antiquewhite">panel</a>
+          </button>
+          {{else}}
+
+          {{/eq}}
+          {{/eq}}
+
+        {{/if}}
+
+        {{#if user}}
+          <button id="logoutButton" type="button" class="btn btn-danger" style="margin-left: 1rem;">
+            <a href="/api/sessions/logout" style="text-decoration: none; color: antiquewhite">logout</a>
+          </button>
         {{/if}}
       </div>
     </div>
   </nav>
-  
+
   <main style="flex-grow: 1">
     {{{body}}}
   </main>
-  
 
 
-<footer class="py-3 bg-body-tertiary">
-  <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-  </ul>
-  <p class="text-center text-body-secondary" >© 2023 Company, Inc</p>
-</footer>
+
+  <footer class="py-3 bg-body-tertiary">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+    </ul>
+    <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
+  </footer>
 
   {{!-- bootstrap: --}}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
 {{#if user}}
 
